syntax = "proto3";

package event;

service IEventService {
    rpc Create (CreateEvent) returns (IEvent);
    rpc Find (FindEvent) returns (stream IEvent);
}

message IEvent {
    int64 id = 1;
    string name = 2;
    optional string description = 3;
}

message CreateEvent {
    string name = 2;
    optional string description = 3;
}

message FindEvent{}